syntax = "proto3";

package thetaradix;

service ThetaRadix {
    rpc Register (RegisterRequest) returns (RegisterReply);
}

message RegisterRequest {
    string mail = 1;
    string nickname = 3;
    string password = 2;
}

message RegisterReply {
    bool success = 1;
    bool pleaseVerifyPassword = 2;
    string errorMessage = 4;
    reserved 3; // Do not remove, used for backwards compatibility
}